fix: overlapping issue, added Link

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -14,6 +14,7 @@
 
 .logo {
   width: 18vw;
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
