--- a/src/components/VideoCard/VideoCard.css
+++ b/src/components/VideoCard/VideoCard.css
@@ -47,6 +47,10 @@
   position: relative;
 }
 
+.hide {
+  display: none;
+}
+
 .options {
   position: absolute;
   top: 1.3rem;
